🔧 fix(ci): Install package in editable mode for imports
- Added 'pip install -e .' to workflow
- Fixes ModuleNotFoundError for intelligence imports
- Tests can now import from intelligence/, commands/, etc.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pytest pytest-asyncio pytest-cov
+        pip install -e .  # Install package in editable mode for imports
     
     - name: 🧪 Run all CI tests (structure validation with mocks)
       run: |
