🔧 fix(ci): Make bot.py importable and fix all CI tests
- Added py-modules=['bot', 'main'] to pyproject.toml for imports
- Added config setup in CI workflow (copy config.yaml.example)
- Added config templates to repo (example, patterns)
- Fixed Path import in test_twitch.py
- Removed skip decorators from bot.py tests (now importable)
- All bot instantiation tests should now pass
- Config tests skip gracefully if config missing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,12 @@ jobs:
         pip install pytest pytest-asyncio pytest-cov
         pip install -e .  # Install package in editable mode for imports
     
+    - name: 🔧 Setup test environment
+      run: |
+        # Copy config example for tests
+        mkdir -p config
+        cp config/config.yaml.example config/config.yaml
+    
     - name: 🧪 Run all CI tests (structure validation with mocks)
       run: |
         echo "::group::CI Tests (Structure + Shannon Validation)"
