--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,5 +108,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install safety
-        safety check --json || true
+        safety scan --output text || true
       continue-on-error: true
