feat: add automated coverage badges with GitHub Actions
- Add pytest-cov to CI workflow for coverage calculation
- Generate coverage.json and badge JSON in CI
- Upload coverage artifacts for 30 days retention
- Add coverage badge to README (updates automatically)
- Add CI Tests badge (shows passing/failing status)
- Add MIT License badge
- Update roadmap: mark v1.1 items as DONE
- Remove obsolete cache enrichment implementation plan
- Current coverage: 39% (structure + imports tests)

All v1.1 roadmap items completed:
✅ Cache consistency (IGDB ground truth)
✅ Format harmonization (unified format_result)
✅ TwitchIO 3.x + EventSub
✅ CI/CD with GitHub Actions
✅ Coverage badges

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,10 @@ wheels/
 .tox/
 .pytest_cache/
 .coverage
+.coverage.*
+coverage.json
 htmlcov/
+badges/
 
 # Debug scripts (commit README only)
 debug/*.log
