--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,48 @@ jobs:
     - name: 🧪 Run all CI tests (structure validation with mocks)
       run: |
         echo "::group::CI Tests (Structure + Shannon Validation)"
-        pytest tests-ci/ -c tests-ci/pytest-ci.ini -v --tb=short --color=no
+        pytest tests-ci/ -c tests-ci/pytest-ci.ini -v --tb=short --color=no --cov=. --cov-report=term --cov-report=json
         echo "::endgroup::"
+    
+    - name: 📊 Generate coverage badge
+      if: matrix.python-version == '3.12' && github.ref == 'refs/heads/main'
+      run: |
+        # Extract coverage percentage
+        COVERAGE=$(python -c "import json; print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
+        echo "Coverage: $COVERAGE%"
+        
+        # Determine badge color
+        if (( $(echo "$COVERAGE >= 80" | bc -l) )); then
+          COLOR="brightgreen"
+        elif (( $(echo "$COVERAGE >= 60" | bc -l) )); then
+          COLOR="yellow"
+        else
+          COLOR="red"
+        fi
+        
+        # Create badge JSON for shields.io endpoint
+        mkdir -p badges
+        cat > badges/coverage.json << EOF
+        {
+          "schemaVersion": 1,
+          "label": "coverage",
+          "message": "${COVERAGE}%",
+          "color": "${COLOR}"
+        }
+        EOF
+        
+        cat badges/coverage.json
+    
+    - name: 📤 Upload coverage artifact
+      if: matrix.python-version == '3.12'
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: |
+          coverage.json
+          badges/coverage.json
+          htmlcov/
+        retention-days: 30
     
     - name: 📊 Generate test summary
       if: always()
