--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+permissions:
+  contents: write  # Needed for peaceiris/actions-gh-pages to push to badges branch
+
 jobs:
   test:
     runs-on: ubuntu-latest
