refactor: clean code with Ruff linter - fix 368 lint errors
- Auto-fixed 328 formatting errors (whitespace, trailing spaces, f-strings)
- Fixed undefined ctx references in translation.py
- Removed unused variables (weight_to_priority, subprocess result)
- Updated pyproject.toml with proper Ruff lint section
- All checks now pass with 0 errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,10 +61,11 @@ exclude = [
     "debug"
 ]
 
+[tool.ruff.lint]
 # Ignore certaines erreurs pour le Neural V2.0
 ignore = [
     "F401",  # Unused imports
-    "F841",  # Unused variables  
+    "F841",  # Unused variables
     "E722",  # Bare except
     "C901",  # Complex functions
     "PLR0913",  # Too many arguments
