chore: add braindev/ directory for experimental work
- Created braindev/ folder for internal research/experiments
- Excluded from git (except README) to keep repo clean
- Workspace for prototyping before production

--- a/.gitignore
+++ b/.gitignore
@@ -94,4 +94,10 @@ token_storage.json
 # 🔐 Configuration avec vraies clés
 config/config.yaml
 config/config.private.yaml
-config/*.private.yaml.ruff_cache/
+config/*.private.yaml
+
+# 🧠 Brainstorming & Recherche (théories non finalisées)
+braindev/
+!braindev/README.md
+
+.ruff_cache/
