feat(joke): Implement Mistral AI intelligent cache + streaming
Solution Mistral AI pour variété des blagues:
- Cache intelligent avec user sessions tracking
- Rotation automatique toutes les 3 blagues OU 5 minutes
- Prompts dynamiques (7 variants: drôle, absurde, court, etc.)
- TTL réduit: 24h → 5min (équilibre perf + fraîcheur)
- Streaming avec accumulation (pas de spam chat)
- Debug mode streaming (chunks visibles terminal)
- max_tokens gen_short: 100 → 150 (blagues complètes)

Tests production validés:
✅ 5 blagues uniques/5 générées (variété 100%)
✅ Rotation v0→v1→v2 validée
✅ Cache hit 20% (optimal avec prompts dynamiques)
✅ Aucune troncature (max_tokens suffisant)
✅ 13/13 tests unitaires passent

Files:
- intelligence/joke_cache.py: Cache avec get_key() + prompts dynamiques
- intelligence/synapses/local_synapse.py: Streaming + max_tokens fix
- tests-local/: 11 nouveaux tests (cache, variety, production)
- docs/: Documentation complète solution

--- a/config/config.sample.yaml
+++ b/config/config.sample.yaml
@@ -27,6 +27,7 @@ llm:
   enabled: true
   fallback_mode: fun
   fallback_provider: none
+  language: fr  # Langue des réponses LLM (fr/en/es/de)
   local_llm: true
   max_tokens_ask: 200
   max_tokens_chill: 150
@@ -35,6 +36,7 @@ llm:
   openai_model: gpt-3.5-turbo
   personality_only_on_cloud: true
   provider: local
+  stream_response_debug: "off"  # "on" pour voir chunks streaming en live, "off" pour production propre
   temperature_ask: 0.5
   temperature_chill: 0.8
   use_personality_on_ask: false
