--- a/config/config.sample.yaml
+++ b/config/config.sample.yaml
@@ -14,15 +14,35 @@
 apis:
   openai_key: your_openai_key_here
   rawg_key: your_rawg_key_here
+  
+  # ⏱️ TIMEOUT API EXTERNE (RAWG, Steam, etc.)
+  timeout: 10.0  # Secondes (APIs externes peuvent être lentes)
+
 bot:
   channel: test_channel
   cooldown: 5
   debug: true
   name: serda_bot
   personality: taquin, cash, second degré, amateur de roast amical et de tech
+  
 cache:
   max_size: 1000
   ttl_seconds: 3600
+
+# 🎮 COMMANDS CONFIGURATION
+commands:
+  cooldowns:
+    ask: 10.0         # !ask <question>
+    joke: 10.0        # !joke
+    mention: 15.0     # @bot mention
+    translate: 5.0    # !translate
+    game_current: 5.0 # !gc
+    game_info: 5.0    # !gi
+  
+  cache:
+    joke_ttl: 300     # Durée cache blagues (5 minutes)
+    joke_max_size: 100
+
 llm:
   enabled: true
   fallback_mode: fun
@@ -35,12 +55,48 @@ llm:
   model_name: qwen2.5-1.5b-instruct
   openai_model: gpt-3.5-turbo
   personality_only_on_cloud: true
+  
+  # 🎯 PROVIDER STRATEGY
+  # Options: local / cloud / auto
   provider: local
-  stream_response_debug: "off"  # "on" pour voir chunks streaming en live, "off" pour production propre
+  
+  stream_response_debug: "off"  # "on" pour debug streaming
   temperature_ask: 0.5
   temperature_chill: 0.8
   use_personality_on_ask: false
   use_personality_on_mention: true
+  
+  # 🧠 INFERENCE PARAMETERS (optimisés A/B testing)
+  inference:
+    ask:
+      max_tokens: 200
+      temperature: 0.3
+      repeat_penalty: 1.1
+      stop_tokens: ["\n", "🔚"]
+    
+    mention:
+      max_tokens: 200
+      temperature: 0.7
+      repeat_penalty: 1.1
+      stop_tokens: ["\n"]
+    
+    gen_long:
+      max_tokens: 100
+      temperature: 0.4
+      repeat_penalty: 1.2
+      stop_tokens: ["🔚", "\n", "400.", "Exemple :", "En résumé,"]
+    
+    joke:
+      max_tokens: 150
+      temperature: 0.7
+      repeat_penalty: 1.1
+      stop_tokens: ["\n"]
+    
+    cloud:
+      max_tokens_short: 90
+      max_tokens_long: 60
+      temperature_short: 0.4
+      temperature_long: 0.8
 logging:
   file: serdabot_v2.log
   level: INFO
@@ -53,10 +109,14 @@ neural_llm:
   local_recovery_time: 300
   max_correlation_history: 100
   min_trials_per_synapse: 3
-  timeout_gen_long: 10.0
-  timeout_gen_short: 5.0
-  timeout_lookup: 5.0
-  timeout_ping: 3.0
+  
+  # ⏱️ TIMEOUTS HTTPX (4 valeurs obligatoires)
+  # httpx.Timeout() EXIGE les 4 paramètres
+  timeout_connect: 5.0      # TCP connection (court)
+  timeout_inference: 30.0   # LLM streaming (long)
+  timeout_write: 10.0       # Send payload (moyen)
+  timeout_pool: 5.0         # Connection pool (court)
+  
   ucb_exploration_factor: 1.4
 rawg:
   api_key: your_api_key_here
