feat(Phase 3.5): kisscharity broadcast command + config-driven channels
KILLER FEATURE - Multi-channel broadcast with source tracking

Added:
- kisscharity command: Broadcast to all connected channels (broadcaster only)
- Source tracking: [Source: broadcaster_name] shown on recipient channels
- Permissions detection: Mod/VIP via Helix API + IRC badges
- Cooldown 5 minutes global (anti-spam)
- 7 unit tests (all passing)

Fixed:
- Channels now from config.yaml (no more hardcoding in main.py)
- config.sample.yaml updated (timeouts, announcements, channels examples)
- metrics.json auto-generated (added to .gitignore)

Enhanced:
- regenerate_bot_token.py: Added USER_READ_MODERATED_CHANNELS scope
- IRC Client: broadcast_message() + get_permissions() methods

Production Validated:
- Tested on 2 channels
- Broadcaster gets feedback: X/Y channels sent
- Recipients see [Source: broadcaster_name] prefix
- Cooldown enforcement validated

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ coverage.json
 htmlcov/
 badges/
 
+# Auto-generated metrics
+metrics.json
+
 # Debug scripts (commit README only)
 debug/*.log
 debug/test_*.local.py
