Cleanup: Remove legacy files and archives
Removed from repository:
- _archive_v3_user_tokens/ (old user token system)
- *.backup, *.old files (backup files)
- Legacy OAuth/token scripts (moved to _scripts_legacy/)

Updated .gitignore:
- Added *.old pattern
- Added _scripts_legacy/ directory
- Added _archive_v3_user_tokens/ pattern

Files removed:
- bot.py.twitchio3.old
- main.py.backup_full, main.py.twitchio3.old
- check_current_scopes.py, check_scopes.py
- exchange_oauth_code.py, refresh_tokens.py
- regenerate_bot_token*.py
- tests obsolete files

Result: Cleaner repository, only production code tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -60,9 +60,12 @@ cache/
 
 # Backups & Archives
 _archive/
+_archive_v3_user_tokens/
+_scripts_legacy/
 *_backup*/
-*.tar.gz
 *.backup
+*.old
+*.tar.gz
 
 # Config secrets
 config.yaml
