Security: Move tests-local/ to .gitignore
tests-local/ contains tests with real API keys (OpenAI, RAWG).
Should not be in git repository.

Changes:
- Added tests-local/ to .gitignore (keep README.md and pytest-local.ini)
- Removed 28 test files from git tracking
- Files remain locally for development

tests-ci/ → Public CI tests (mocks, no secrets) ✅
tests-local/ → Private tests (real APIs, gitignored) 🔒

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,11 @@ coverage.json
 htmlcov/
 badges/
 
+# Tests locaux avec vraies clés API (ne pas commiter)
+tests-local/
+!tests-local/README.md
+!tests-local/pytest-local.ini
+
 # Auto-generated metrics
 metrics.jsonl
 
