feat: simplify Wikipedia to MIT-only basic handler
- New backends/wikipedia_handler.py: simple wikipediaapi wrapper (~120 lines)
- String in → String out (no complex dict/format architecture)
- Language support from config.yaml (wikipedia.lang)
- Full summary instead of first sentence only
- JSON cache system (cache/wikipedia.json, 30 days TTL)
- All tests passing (test_wiki_basic.py: 5/5)

Fixes:
- twitchapi/eventsub_client.py: ignore stream.offline with broadcaster_id=None

Cleanup:
- Remove algorithm references from README (delta-s3 not integrated yet)
- Commands cleanup (removed unused game/translation/intelligence commands)

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,36 @@ braindev/
 !braindev/README.md
 
 .ruff_cache/
+
+# 📊 Données sensibles / Exports
+metrics.jsonl
+*.jsonl
+analytics/
+
+# 🔬 Expérimentations non publiables
+experiments/
+sandbox/
+drafts/
+
+# 📦 Build artifacts
+*.whl
+*.tar.gz
+*.zip
+
+# 🎯 IDE et éditeur
+*.sublime-*
+*.code-workspace
+.history/
+
+# 🔐 Protection supplémentaire tokens/clés
+*.env.*
+!*.env.example
+secrets/
+private/
+*.private.*
+
+# 🔒 Δₛ³ Algorithm (BSL 1.1) - Separate repo
+delta-s3/
+!delta-s3/README.md
+!delta-s3/LICENSE
+!delta-s3/COMMERCIAL_LICENSE.md
