--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ aiohttp==3.13.1
 httpx==0.28.1
 requests>=2.31.0
 
+# Wikipedia integration
+Wikipedia-API>=0.6.0
+
 # Configuration
 PyYAML==6.0.3
 
