--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,10 @@ requests>=2.31.0
 # Wikipedia integration
 Wikipedia-API>=0.6.0
 
+# Web scraping (pour Steam Store enrichment)
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+
 # Configuration
 PyYAML==6.0.3
 
