feat: Database Mode v4.0.0 - Encrypted OAuth tokens with Fernet
🎯 Phase 2 - Database Layer
- SQLite database with WAL mode for concurrent access
- 5 tables: users, oauth_tokens (encrypted), instances, audit_log, config
- Fernet encryption (AES-128-CBC + HMAC-SHA256) for OAuth tokens
- TokenEncryptor with auto-key generation (.kissbot.key)
- DatabaseManager API with full CRUD operations
- Migration script from YAML to Database (migrate_yaml_to_db.py)

🎯 Phase 3 - Integration
- main.py: Added --use-db flag for database mode
- supervisor_v1.py: Multi-process support with --use-db propagation
- kissbot.sh: Updated wrapper script with database mode support
- Dual mode operation: YAML (default) and Database coexist

📚 Documentation
- docs/DATABASE_ARCHITECTURE.md: Comprehensive 300+ line guide
- docs/MIGRATION_DATABASE.md: Quick migration guide with troubleshooting
- README.md: Database Mode section added
- CHANGELOG.md: v4.0.0 release notes

🔐 Security
- Fernet encryption for access_token and refresh_token
- Key file protection (600 permissions)
- .gitignore updated to prevent sensitive data commits
- Audit log for all database operations

✅ Tests Validated
- Encryption/decryption roundtrip
- Database initialization with all tables
- YAML to Database migration (2 users, 2 tokens)
- Single-channel mode with encrypted tokens
- Multi-process mode (6 channels)
- IRC connection with database tokens
- Backward compatibility (YAML mode still works)

Breaking Changes: NONE (opt-in via --use-db flag)

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,18 @@ config/credentials/*.json
 token_storage.json
 .tio.tokens.json
 
+# 🔐 Database & Encryption (⚠️ CRITICAL - Never commit these!)
+kissbot.db
+kissbot.db-wal
+kissbot.db-shm
+kissbot_test.db
+kissbot_test.db-wal
+kissbot_test.db-shm
+.kissbot.key
+.kissbot_test.key
+kissbot.db.backup_*
+backups/
+
 # 🔐 Patterns sensibles supplémentaires
 *.token
 *.key
