feat: EventSub Hub v4.1.0 - Centralized WebSocket Manager
Core: Single persistent WebSocket for all EventSub subscriptions
- 1 WebSocket connection multiplexes events for N bots/channels
- IPC server (Unix socket) handles bot communications
- Rate limiting (2 req/s) with jitter (150-300ms)
- Backoff strategy: 10 attempts, exponential delay

Components:
- eventsub_hub.py: Main Hub service (1024 lines)
- core/ipc_protocol.py: IPC message protocol
- scripts/hub_ctl.py: CLI for Hub operations
- docs/EVENTSUB_HUB.md: Comprehensive guide (15 pages)

Database v5.0:
- hub_state: ws_state, current_session_id, ws_reconnect_count
- desired_subscriptions, active_subscriptions tables
- Migration: database/migrate_hub_v1.py (non-destructive)

Bot Integration:
- main.py: --eventsub=[hub|direct] flag
- Backward compatible (direct mode default)
- Fallback: auto-switch to direct if Hub unavailable

Performance (Tested):
- 6 channels: <2% CPU, 60 MB RAM (25s test)
- Estimated scaling: 10-50 channels OK, 50-100 SQLite edge, 100+ needs PostgreSQL

Testing: 12/12 tests passed (supervisor + 6 bots, failover verified)
Security: All API keys in config.test.yaml replaced with fake values

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,11 @@ delta-s3/
 !delta-s3/README.md
 !delta-s3/LICENSE
 !delta-s3/COMMERCIAL_LICENSE.md
+
+# EventSub Hub runtime files
+logs/hub.out
+logs/supervisor_test.log
+pids/*.pid
+
+# Test files
+test_supervisor_hub.log
