feat: Rust game engine integration v0.1.0 + project cleanup
- Add kissbot-game-engine (PyO3, 60x faster cache)
- Add rust-supervisor experimental
- Add delta-s3-rust implementation
- Integrate game_lookup_rust wrapper (hybrid Rust+Python fallback)
- Update message_handler to use Rust engine
- Add comprehensive docs (ARCHITECTURE.md, SCRIPTS_STACK.md, CLEANUP_GUIDE.md)
- Add config templates (*.example) for testing
- Ignore legacy archive/ and test configs (local only)
- Performance: 0.08-0.12ms cache hit vs 5-8ms Python
- Tests: 5/5 passing

Breaking changes: None (backward compatible via Python fallback)

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,31 @@ pids/*.pid
 
 # Test files
 test_supervisor_hub.log
+
+# Algorithme propriétaire DRAKON
+DRAKON/
+
+# Binaires et builds Rust
+kissbot-game-engine/target/
+rust-supervisor/target/
+delta-s3-rust/target/
+
+# Bases de données
+*.db
+*.db-shm
+*.db-wal
+
+# Logs et metrics
+metrics.jsonl
+logs/*.log
+
+# Virtual env
+kissbot-venv/
+backends/steam-guard.me
+
+# Test configs (user-specific)
+config/config.test.yaml
+config/config.test-supervisor.yaml
+
+# Archive legacy (local only)
+archive/
