chore(config): Clean config.sample.yaml + gitignore configs perso
🗑️ Suppression:
- config.sample.yaml (ancien template, remplacé par config.yaml.example)

🔒 .gitignore:
- config/config.test.yaml (config perso tests avec secrets)
- config/config.test-supervisor.yaml (config perso tests supervisor)

✅ Configs finales versionées (4 templates):
- config.yaml.example (template setup)
- config.test.yaml.example (template tests)
- config.test-supervisor.yaml.example (template tests supervisor)
- enhanced/minimal_patterns.yaml (patterns IA)

Sécurité: configs perso avec secrets hors git 🔐

--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,5 @@ config/config.test-supervisor.yaml
 
 # Archive legacy (local only)
 archive/
+config/config.test.yaml
+config/config.test-supervisor.yaml
