--- a/web/backend/requirements.txt
+++ b/web/backend/requirements.txt
@@ -3,6 +3,7 @@
 # FastAPI
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+pydantic>=2.0.0
 pydantic-settings>=2.0.0
 
 # HTTP client
@@ -11,9 +12,10 @@ httpx>=0.25.0
 # Templates
 jinja2>=3.1.0
 
-# Security
+# Security & Rate Limiting
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
+slowapi>=0.1.9
 
-# CORS
+# CORS / Forms
 python-multipart>=0.0.6
