refactor(commands): migrate Session 1 - system + promo to modules/
New files:
- user_commands/system.py: ping, uptime, stats, help
- user_commands/promo.py: kbkofi, kisscharity

message_handler.py: delegate to modules/ (6 commands)
Tests: 7/7 passed

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,4 @@ config/config.test-supervisor.yaml
 archive/
 config/config.test.yaml
 config/config.test-supervisor.yaml
+TODO_COMMANDS_MIGRATION.md
