--- a/web/backend/.env.example
+++ b/web/backend/.env.example
@@ -4,9 +4,15 @@
 # Twitch OAuth (from dev.twitch.tv)
 TWITCH_CLIENT_ID=your_client_id_here
 TWITCH_CLIENT_SECRET=your_client_secret_here
-TWITCH_REDIRECT_URI=http://localhost:8080/auth/callback
+
+# IMPORTANT: Update this to your production URL when deploying to VPS
+# Development: http://localhost:8000/auth/callback
+# Production:  https://your-vps.example.com/auth/callback
+TWITCH_REDIRECT_URI=http://localhost:8000/auth/callback
 
 # Frontend URL (for CORS and redirects)
+# Development: http://localhost:5173
+# Production:  https://your-vps.example.com
 FRONTEND_URL=http://localhost:5173
 
 # Database (path relative to backend/)
@@ -14,7 +20,12 @@ DATABASE_PATH=../../kissbot.db
 ENCRYPTION_KEY_FILE=../../.kissbot.key
 
 # Session secret (generate with: python -c "import secrets; print(secrets.token_hex(32))")
+# ⚠️ CHANGE THIS IN PRODUCTION!
 SECRET_KEY=change-this-in-production
 
-# Debug mode
+# Session expiration (hours)
+SESSION_EXPIRE_HOURS=168
+
+# Debug mode (set to false in production)
 DEBUG=true
+
